<resources>
    <string name="app_name">Prank Sounds</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="design_color">"#F18924"</string>

    <!-- Splash Screen   -->
    <string name="content_label">Enjoy a relaxing time \nwith your friends</string>
    <string name="content_detail">Lets start your joke. Some jokes create good laughs \naround others … the red face of the prankster\'s part!</string>
    <string name="app_version">Version 1.0</string>
    <!-- Policy Screen   -->
    <string name="policy_start_button">Start</string>

    <!--   Home screen -->
    <string name="home_screen">Home Fragment</string>
    <string name="prank_hair_cutting">Hair Cutting</string>
    <string name="prank_broken_screen">Broken Screen</string>
    <string name="prank_call_screen">Call Screen</string>
    <string name="prank_sound_funny">Sound Funny</string>
    <string name="prank_taser_prank">Taser Prank</string>
    <string name="prank_setting">Settings</string>

    <!--  Sound Funny  -->
    <string name="no_internet_title">No Internet</string>
    <string name="no_internet_des">
        You’re offline. Please check your internet
        connection an try again.
    </string>

    <string name="play_more_button">Play More Sound</string>
    <string name="retry_button">Tap to retry</string>
    <string name="pop_up_menu_notification">Notification</string>
    <string name="pop_up_menu_ringtone">Ringtone</string>
    <string name="pop_up_menu_alarm">Alarm</string>
    <string name="pop_up_menu_header">Set As</string>

    <!--  Call screen  -->
    <string name="retry">Tap to retry</string>
    <string name="no_result_title">No result</string>
    <string name="no_result_try_again">Please try again!</string>
    <string name="no_result_add_new_caller">List Caller is Empty!</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="add_to_my_caller">Add to My Caller</string>
    <string name="insert_success">Insert successfully!</string>
    <string name="update_success">Update successfully!</string>
    <string name="invalid_photo">Invalid photo!</string>
    <string name="caller_name">Caller name</string>
    <string name="phone_number">Phone number</string>
    <string name="empty_list">Empty list</string>
    <string name="photos">Photos</string>
    <string name="grant_permission">Please grant the application permission to continue using the app</string>
    <string name="goto_settings">You must approve this permission in Permissions in the app settings on your device to continue using the app.</string>
    <string name="settings">Settings</string>
    <string name="default_image"> <u>Default image</u></string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete_start">Are you sure you want to delete</string>
    <string name="confirm_delete_start_end">\?</string>
    <string name="confirm_delete_end">It cannot be undone.</string>
    <string name="confirm_title">Confirm?</string>
    <string name="delete_complete">Delete complete</string>
    <string name="trend_caller">Trend Caller</string>
    <string name="my_caller">My Caller</string>
    <string name="edit_call_screen">Edit call screen</string>
    <string name="write_setting_permission">Please allow the app to modify system settings to use this feature</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="unknown">Unknown</string>

    <!--    // setup call screen-->
    <string name="default_text">Default text</string>
    <string name="when_to_call">When to call</string>
    <string name="seconds">seconds</string>
    <string name="second">second</string>
    <string name="minutes">minutes</string>
    <string name="minute">minute</string>
    <string name="now">Now</string>
    <string name="set_call">Set Call</string>
    <string name="five_seconds">5 secs</string>
    <string name="thirty_seconds">30 secs</string>
    <string name="one_minute">1 min</string>
    <string name="confirm_message">You first click \"YES\" > Find \"Prank sound\" app and allow this permission</string>
    <string name="confirm_display_over_title">Please grant Display over other apps!</string>


    <!--  Calling screen  -->
    <string name="incoming_call">Incoming Call</string>
    <string name="phone_number_">036–875–2432</string>

    <!-- Toolbar title   -->
    <string name="toolbar_title_privacy_policy">Privacy Policy</string>
    <string name="toolbar_title_sound_funny">Sound Funny</string>
    <string name="toolbar_title_broken_screen">Broken Screen</string>
    <string name="toolbar_title_hair_cutting">Hair Cutting</string>
    <string name="toolbar_title_settings">Settings</string>
    <string name="toolbar_title_taser_prank">Taser Prank</string>
    <string name="toolbar_title_call_screen">Call Screen</string>
    <string name="favorite_sound_is_empty">Favorite Sound is Empty</string>

    <string name="download_error_message">Cannot download the file, please check your connection and try again</string>
</resources>

