<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        android:layout_marginEnd="30dp">

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_pop_up_window"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_header_popup_window"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="@string/pop_up_menu_header"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="@string/pop_up_menu_notification"
                android:textColor="#535353"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvAlarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="@string/pop_up_menu_alarm"
                android:textColor="#535353"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvRingtone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="@string/pop_up_menu_ringtone"
                android:textColor="#535353"
                android:textSize="12sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>