<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >
    <data>
        <variable
            name="viewModel"
            type="com.hola360.pranksounds.ui.dialog.confirmdelete.ConfirmDeleteDialogViewModel" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/dp_8">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/frameLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/design_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginVertical="@dimen/dp_16"
                    android:layout_marginStart="@dimen/dp_24"
                    android:text="@string/confirm_title"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:layout_marginVertical="@dimen/dp_24"
                android:maxLines="2"
                android:text="@{viewModel.title}"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout2" />

            <TextView
                android:id="@+id/tvMessage2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_24"
                android:gravity="start"
                android:text="@string/confirm_delete_end"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_15"
                app:layout_constraintBottom_toTopOf="@id/llButton"
                app:layout_constraintEnd_toEndOf="@+id/tvMessage"
                app:layout_constraintStart_toStartOf="@+id/tvMessage"
                app:layout_constraintTop_toBottomOf="@+id/tvMessage" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/llButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/tvMessage2">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:backgroundTint="@color/gray"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/cancel_text_color"
                    android:textSize="@dimen/sp_15"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/btnOk"
                    app:layout_constraintEnd_toStartOf="@+id/btnOk"
                    app:layout_constraintTop_toTopOf="@+id/btnOk" />

                <Button
                    android:id="@+id/btnOk"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:backgroundTint="@color/enable_button"
                    android:text="@string/ok"
                    android:textSize="@dimen/sp_15"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>