<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.hola360.pranksounds.ui.callscreen.addcallscreen.AddCallScreenViewModel" />
        <import type="android.view.View"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.callscreen.addcallscreen.AddCallScreenFragment">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbAddCallScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_baseline_arrow_back"
            app:title="Add Call Screen"
            app:titleTextColor="@color/white"
            app:titleTextAppearance="@style/Theme.PrankSounds.ToolbarTextAppearance"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tbAddCallScreen">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/imgAvatar"
                            android:layout_width="130dp"
                            android:layout_height="130dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/dp_32"
                            android:layout_marginRight="@dimen/dp_24"
                            android:layout_marginBottom="@dimen/dp_24"
                            android:src="@drawable/img_avatar_default"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/tvDefaultImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp_4"

                    android:text="@string/default_image"
                    android:textAppearance="?textAppearanceBody1"
                    android:textColor="@color/design_color"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/tvCallerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/caller_name"
                    android:padding="20dp"
                    android:singleLine="true"
                    android:textAppearance="?textAppearanceBody1" />

                <EditText
                    android:id="@+id/tvPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:padding="20dp"
                    android:singleLine="true"
                    android:textAppearance="?textAppearanceBody1" />

                <Button
                    android:id="@+id/btnAdd"
                    style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_32"
                    android:backgroundTint="@{viewModel.isEmpty()?@color/disable_button:@color/enable_button}"
                    android:enabled="@{!viewModel.isEmpty()}"
                    android:text="@{viewModel.isUpdate()?@string/update:@string/add}"
                    android:textAllCaps="false"
                    android:textAppearance="?textAppearanceBody1"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="normal" />
            </LinearLayout>


        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
